@@ -2,77 +2,97 @@ package org.opentripplanner.ext.geocoder;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.opentripplanner.transit.model._data.TransitModelForTest.id;
-import static org.opentripplanner.transit.model._data.TransitModelForTest.station;
-import static org.opentripplanner.transit.model._data.TransitModelForTest.stop;
 import static org.opentripplanner.transit.model.basic.TransitMode.BUS;
 import static org.opentripplanner.transit.model.basic.TransitMode.FERRY;
 
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.Multimap;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import javax.annotation.Nonnull;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.opentripplanner.routing.graph.Graph;
+import org.opentripplanner.model.FeedInfo;
+import org.opentripplanner.transit.model._data.TransitModelForTest;
 import org.opentripplanner.transit.model.basic.TransitMode;
 import org.opentripplanner.transit.model.framework.Deduplicator;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.model.network.Route;
+import org.opentripplanner.transit.model.organization.Agency;
 import org.opentripplanner.transit.model.site.RegularStop;
 import org.opentripplanner.transit.model.site.Station;
 import org.opentripplanner.transit.model.site.StopLocation;
 import org.opentripplanner.transit.service.DefaultTransitService;
-import org.opentripplanner.transit.service.StopModel;
 import org.opentripplanner.transit.service.TransitModel;
 
 class LuceneIndexTest {
 
-  static Graph graph = new Graph();
+  private static final TransitModelForTest TEST_MODEL = TransitModelForTest.of();
+
+  static final Agency BVG = Agency
+    .of(id("bvg"))
+    .withName("BVG")
+    .withTimezone("Europe/Berlin")
+    .build();
 
   // Berlin
-  static Station BERLIN_HAUPTBAHNHOF_STATION = station("Hauptbahnhof")
+  static final Station BERLIN_HAUPTBAHNHOF_STATION = TEST_MODEL
+    .station("Hauptbahnhof")
     .withCoordinate(52.52495, 13.36952)
     .build();
-  static Station ALEXANDERPLATZ_STATION = station("Alexanderplatz")
+  static final Station ALEXANDERPLATZ_STATION = TEST_MODEL
+    .station("Alexanderplatz")
     .withCoordinate(52.52277, 13.41046)
     .build();
 
-  static RegularStop ALEXANDERPLATZ_BUS = stop("Alexanderplatz Bus")
+  static final RegularStop ALEXANDERPLATZ_BUS = TEST_MODEL
+    .stop("Alexanderplatz Bus")
     .withCoordinate(52.52277, 13.41046)
     .withVehicleType(BUS)
     .withParentStation(ALEXANDERPLATZ_STATION)
     .build();
 
-  static RegularStop ALEXANDERPLATZ_RAIL = stop("Alexanderplatz S-Bahn")
+  static final RegularStop ALEXANDERPLATZ_RAIL = TEST_MODEL
+    .stop("Alexanderplatz S-Bahn")
     .withCoordinate(52.52157, 13.41123)
     .withVehicleType(TransitMode.RAIL)
     .withParentStation(ALEXANDERPLATZ_STATION)
     .build();
-  static RegularStop LICHTERFELDE_OST_1 = stop("Lichterfelde Ost")
+  static final RegularStop LICHTERFELDE_OST_1 = TEST_MODEL
+    .stop("Lichterfelde Ost")
     .withId(id("lichterfelde-gleis-1"))
     .withCoordinate(52.42986, 13.32808)
     .build();
-  static RegularStop LICHTERFELDE_OST_2 = stop("Lichterfelde Ost")
+  static final RegularStop LICHTERFELDE_OST_2 = TEST_MODEL
+    .stop("Lichterfelde Ost")
     .withId(id("lichterfelde-gleis-2"))
     .withCoordinate(52.42985, 13.32807)
     .build();
-  static RegularStop WESTHAFEN = stop("Westhafen")
+  static final RegularStop WESTHAFEN = TEST_MODEL
+    .stop("Westhafen")
     .withVehicleType(null)
     .withCoordinate(52.42985, 13.32807)
     .build();
 
   // Atlanta
-  static Station FIVE_POINTS_STATION = station("Five Points")
+  static final Station FIVE_POINTS_STATION = TEST_MODEL
+    .station("Five Points")
     .withCoordinate(33.753899, -84.39156)
     .build();
 
-  static RegularStop ARTS_CENTER = stop("Arts Center")
+  static final RegularStop ARTS_CENTER = TEST_MODEL
+    .stop("Arts Center")
     .withCode("4456")
     .withCoordinate(52.52277, 13.41046)
     .build();
-  static RegularStop ARTHUR = stop("Arthur Langford Jr Pl SW at 220")
+  static final RegularStop ARTHUR = TEST_MODEL
+    .stop("Arthur Langford Jr Pl SW at 220")
     .withCoordinate(52.52277, 13.41046)
     .build();
 
@@ -82,7 +102,7 @@ class LuceneIndexTest {
 
   @BeforeAll
   static void setup() {
-    var stopModel = StopModel.of();
+    var stopModel = TEST_MODEL.stopModelBuilder();
     List
       .of(
         ALEXANDERPLATZ_BUS,
@@ -98,6 +118,7 @@ class LuceneIndexTest {
       .of(ALEXANDERPLATZ_STATION, BERLIN_HAUPTBAHNHOF_STATION, FIVE_POINTS_STATION)
       .forEach(stopModel::withStation);
     var transitModel = new TransitModel(stopModel.build(), new Deduplicator());
+    transitModel.index();
     var transitService = new DefaultTransitService(transitModel) {
       private final Multimap<StopLocation, TransitMode> modes = ImmutableMultimap
         .<StopLocation, TransitMode>builder()
@@ -112,8 +133,34 @@ class LuceneIndexTest {
           return List.copyOf(modes.get(stop));
         }
       }
+
+      @Override
+      public Agency getAgencyForId(FeedScopedId id) {
+        if (id.equals(BVG.getId())) {
+          return BVG;
+        }
+        return null;
+      }
+
+      @Override
+      public Set<Route> getRoutesForStop(StopLocation stop) {
+        return Set.of(TransitModelForTest.route("route1").withAgency(BVG).build());
+      }
+
+      @Override
+      public FeedInfo getFeedInfo(String feedId) {
+        return new FeedInfo(
+          "F",
+          "A Publisher",
+          "http://example.com",
+          "de",
+          LocalDate.MIN,
+          LocalDate.MIN,
+          "1"
+        );
+      }
     };
-    index = new LuceneIndex(graph, transitService);
+    index = new LuceneIndex(transitService);
     mapper = new StopClusterMapper(transitService);
   }
 
@@ -121,7 +168,7 @@ class LuceneIndexTest {
   void stopLocations() {
     var result1 = index.queryStopLocations("lich", true).toList();
     assertEquals(1, result1.size());
-    assertEquals(LICHTERFELDE_OST_1.getName().toString(), result1.get(0).getName().toString());
+    assertEquals(LICHTERFELDE_OST_1.getName().toString(), result1.getFirst().getName().toString());
 
     var result2 = index.queryStopLocations("alexan", true).collect(Collectors.toSet());
     assertEquals(Set.of(ALEXANDERPLATZ_BUS, ALEXANDERPLATZ_RAIL), result2);
@@ -145,50 +192,106 @@ class LuceneIndexTest {
   @Nested
   class StopClusters {
 
-    @Test
-    void stopClusters() {
-      var result1 = index.queryStopClusters("alex").toList();
-      assertEquals(List.of(mapper.map(ALEXANDERPLATZ_STATION)), result1);
+    @ParameterizedTest
+    @ValueSource(
+      strings = {
+        "Alexanderplatz",
+        "Alexa",
+        "alex",
+        "aleyanderplazt",
+        "alexnderplazt",
+        "Alexnderplatz",
+        "Alexnaderplatz",
+        "xande",
+        "xanderpla",
+        "alexnaderplaz",
+        "Alexanderplat",
+        "alexanderplat",
+        "alexand",
+        "alexander platz",
+        "alexander-platz",
+        "alexander",
+      }
+    )
+    void stopClustersWithTypos(String searchTerm) {
+      var results = index.queryStopClusters(searchTerm).toList();
+      var ids = results.stream().map(primaryId()).toList();
+      assertEquals(List.of(ALEXANDERPLATZ_STATION.getId()), ids);
     }
 
     @Test
     void fuzzyStopClusters() {
-      var result1 = index.queryStopClusters("arts").toList();
-      assertEquals(List.of(mapper.map(ARTS_CENTER).get()), result1);
+      var result1 = index.queryStopClusters("arts").map(primaryId()).toList();
+      assertEquals(List.of(ARTS_CENTER.getId()), result1);
     }
 
     @Test
     void deduplicatedStopClusters() {
       var result = index.queryStopClusters("lich").toList();
       assertEquals(1, result.size());
-      assertEquals(LICHTERFELDE_OST_1.getName().toString(), result.get(0).name());
+      assertEquals(LICHTERFELDE_OST_1.getName().toString(), result.getFirst().primary().name());
     }
 
     @ParameterizedTest
     @ValueSource(
       strings = {
-        "five", "five ", "five p", "five po", "five poi", "five poin", "five point", "five points",
+        "five",
+        "five ",
+        "five p",
+        "five po",
+        "five poi",
+        "five poin",
+        "five point",
+        "five points",
+        "fife point",
+        "five poits",
+        "fife",
+        "points",
+        "ife points",
+        "the five points",
+        "five @ points",
+        "five @ the points",
+        "five@points",
+        "five at points",
+        "five&points",
+        "five & points",
+        "five and the points",
+        "points five",
+        "points fife",
       }
     )
     void stopClustersWithSpace(String query) {
-      var result = index.queryStopClusters(query).toList();
-      assertEquals(List.of(mapper.map(FIVE_POINTS_STATION)), result);
+      var result = index.queryStopClusters(query).map(primaryId()).toList();
+      assertEquals(List.of(FIVE_POINTS_STATION.getId()), result);
     }
 
-    @Test
-    void stopCode() {
-      var result = index.queryStopClusters(ARTS_CENTER.getCode()).toList();
+    @ParameterizedTest
+    @ValueSource(strings = { "4456", "445" })
+    void fuzzyStopCode(String query) {
+      var result = index.queryStopClusters(query).toList();
       assertEquals(1, result.size());
-      assertEquals(ARTS_CENTER.getName().toString(), result.get(0).name());
+      assertEquals(ARTS_CENTER.getName().toString(), result.getFirst().primary().name());
     }
 
     @Test
     void modes() {
       var result = index.queryStopClusters("westh").toList();
       assertEquals(1, result.size());
-      var stop = result.get(0);
-      assertEquals(WESTHAFEN.getName().toString(), stop.name());
-      assertEquals(List.of(FERRY.name(), BUS.name()), stop.modes());
+      var cluster = result.getFirst();
+      assertEquals(WESTHAFEN.getName().toString(), cluster.primary().name());
+      assertEquals(List.of(FERRY.name(), BUS.name()), cluster.primary().modes());
     }
+
+    @Test
+    void agenciesAndFeedPublisher() {
+      var cluster = index.queryStopClusters("alexanderplatz").toList().getFirst();
+      assertEquals(ALEXANDERPLATZ_STATION.getName().toString(), cluster.primary().name());
+      assertEquals(List.of(StopClusterMapper.toAgency(BVG)), cluster.primary().agencies());
+      assertEquals("A Publisher", cluster.primary().feedPublisher().name());
+    }
+  }
+
+  private static @Nonnull Function<StopCluster, FeedScopedId> primaryId() {
+    return c -> c.primary().id();
   }
 }
