@@ -93,23 +93,25 @@ public class VehicleParkingsLayerTest {
     var config =
       """
       {
-        "vectorTileLayers": [
-          {
-            "name": "vehicleParking",
-            "type": "VehicleParking",
-            "mapper": "Stadtnavi",
-            "maxZoom": 20,
-            "minZoom": 14,
-            "cacheMaxSeconds": 60,
-            "expansionFactor": 0
-          }
-        ]
+        "vectorTiles": {
+          "layers" : [
+            {
+              "name": "vehicleParking",
+              "type": "VehicleParking",
+              "mapper": "Stadtnavi",
+              "maxZoom": 20,
+              "minZoom": 14,
+              "cacheMaxSeconds": 60,
+              "expansionFactor": 0
+            }
+          ]
+        }
       }
       """;
     var nodeAdapter = newNodeAdapterForTest(config);
-    var tiles = VectorTileConfig.mapVectorTilesParameters(nodeAdapter, "vectorTileLayers");
+    var tiles = VectorTileConfig.mapVectorTilesParameters(nodeAdapter, "vectorTiles");
     assertEquals(1, tiles.layers().size());
-    var builder = new VehicleParkingsLayerBuilder(graph, tiles.layers().get(0), Locale.US);
+    var builder = new VehicleParkingsLayerBuilder(graph, tiles.layers().getFirst(), Locale.US);
 
     List<Geometry> geometries = builder.getGeometries(new Envelope(0.99, 1.01, 1.99, 2.01));
 
