@@ -2,21 +2,21 @@ package org.opentripplanner.graph_builder.module;
 
 import static graphql.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.io.File;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.opentripplanner.ConstantsForTests;
 import org.opentripplanner.gtfs.graphbuilder.GtfsBundle;
 import org.opentripplanner.gtfs.graphbuilder.GtfsModule;
 import org.opentripplanner.model.calendar.ServiceDateInterval;
 import org.opentripplanner.routing.graph.Graph;
-import org.opentripplanner.test.support.VariableSource;
+import org.opentripplanner.test.support.ResourceLoader;
 import org.opentripplanner.transit.model.framework.Deduplicator;
 import org.opentripplanner.transit.service.StopModel;
 import org.opentripplanner.transit.service.TransitModel;
@@ -24,10 +24,10 @@ import org.opentripplanner.transit.service.TransitModel;
 class GtfsModuleTest {
 
   @Test
-  public void addShapesForFrequencyTrips() {
+  void addShapesForFrequencyTrips() {
     var model = buildTestModel();
 
-    var bundle = new GtfsBundle(new File(ConstantsForTests.FAKE_GTFS));
+    var bundle = new GtfsBundle(ConstantsForTests.SIMPLE_GTFS);
     var module = new GtfsModule(
       List.of(bundle),
       model.transitModel,
@@ -45,13 +45,27 @@ class GtfsModuleTest {
 
     assertEquals(1, frequencyTripPattern.size());
 
-    var tripPattern = frequencyTripPattern.get(0);
+    var tripPattern = frequencyTripPattern.getFirst();
     assertNotNull(tripPattern.getGeometry());
     assertNotNull(tripPattern.getHopGeometry(0));
 
     var pattern = model.transitModel.getTripPatternForId(tripPattern.getId());
     assertNotNull(pattern.getGeometry());
     assertNotNull(pattern.getHopGeometry(0));
+  }
+
+  @Test
+  void duplicateFeedId() {
+    var bundles = List.of(bundle("A"), bundle("A"));
+    var model = buildTestModel();
+
+    var module = new GtfsModule(
+      bundles,
+      model.transitModel,
+      model.graph,
+      ServiceDateInterval.unbounded()
+    );
+    assertThrows(IllegalArgumentException.class, module::buildGraph);
   }
 
   private static TestModels buildTestModel() {
@@ -64,28 +78,30 @@ class GtfsModuleTest {
 
   record TestModels(Graph graph, TransitModel transitModel) {}
 
+  static GtfsBundle bundle(String feedId) {
+    var b = new GtfsBundle(ResourceLoader.of(GtfsModuleTest.class).file("/gtfs/interlining"));
+    b.setFeedId(new GtfsFeedId.Builder().id(feedId).build());
+    return b;
+  }
+
   @Nested
   class Interlining {
 
-    static GtfsBundle bundle(String feedId) {
-      var b = new GtfsBundle(new File("src/test/resources/gtfs/interlining"));
-      b.setFeedId(new GtfsFeedId.Builder().id(feedId).build());
-      return b;
+    static List<Arguments> interliningCases() {
+      return List.of(
+        Arguments.of(List.of(bundle("A")), 2),
+        Arguments.of(List.of(bundle("A"), bundle("B")), 4),
+        Arguments.of(List.of(bundle("A"), bundle("B"), bundle("C")), 6)
+      );
     }
-
-    static Stream<Arguments> interliningCases = Stream.of(
-      Arguments.of(List.of(bundle("A")), 2),
-      Arguments.of(List.of(bundle("A"), bundle("B")), 4),
-      Arguments.of(List.of(bundle("A"), bundle("B"), bundle("C")), 6)
-    );
 
     /**
      * We test that the number of stay-seated transfers grows linearly (not exponentially) with the
      * number of GTFS input feeds.
      */
     @ParameterizedTest(name = "Bundles {0} should generate {1} stay-seated transfers")
-    @VariableSource("interliningCases")
-    public void interline(List<GtfsBundle> bundles, int expectedTransfers) {
+    @MethodSource("interliningCases")
+    void interline(List<GtfsBundle> bundles, int expectedTransfers) {
       var model = buildTestModel();
 
       var feedIds = bundles.stream().map(GtfsBundle::getFeedId).collect(Collectors.toSet());
